[package]
name = "lightning"
version = "1.0.0"
edition = "2021"

description = "Provides lightning-fast graph data access to ArangoDB"
license = "MIT License"
repository = "https://github.com/arangodb/lightning"

[dependencies]
anyhow = "1.0.80"
rand = { version = "0.8.5", default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
reqwest-retry = "0.3.0"
reqwest-middleware = "0.2.4"
serde_json = "1.0"
bytes = "1.5.0"
log = "0.4.20"
xxhash-rust = { version = "0.8.6", features = ["xxh3"] }

[dependencies.pyo3]
version = "0.20.2"