[package]
name = "lightning"
version = "1.0.0"
edition = "2021"

description = "Provides lightning-fast graph data access to ArangoDB"
license = "MIT License"
repository = "https://github.com/arangodb/lightning"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
log = "0.4.22"
bytes = { version = "1.4.0", default-features = false }
reqwest = { version = "0.11.16", features = ["__rustls", "json"], default-features = false }
thiserror = "1.0.61"