[package]
name = "arangors-graph-exporter"
version = "0.0.7"
edition = "2021"

description = "Provides lightning-fast graph data access to ArangoDB"
license = "MIT"
repository = "https://github.com/arangodb/arangors-graph-exporter"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
log = "0.4.22"
bytes = { version = "1.4.0", default-features = false }
reqwest = { version = "0.11.16", features = ["__rustls", "json"], default-features = false }
reqwest-middleware = "0.2.4"
reqwest-retry = "0.3.0"
thiserror = "1.0.61"

[dev-dependencies]
serial_test = "0.5"
tokio = { version = "1.38.0", features = ["full"] }
arangors = { version = "0.6" }
rstest = "0.21.0"
